--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "phpstan/phpdoc-parser": "^1.24",
         "runtime/frankenphp-symfony": "^0.1.1",
         "symfony/asset": "6.3.*",
+        "symfony/asset-mapper": "6.3.*",
         "symfony/console": "6.3.*",
         "symfony/doctrine-messenger": "6.3.*",
         "symfony/dotenv": "6.3.*",
